--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-key:'AIzaSyAEQvKUVouPDENLkQlCF6AAap1Ze-6zMos'
-google.url:'https://maps.googleapis.com/maps/api/directions/json'
-
+logging.level.org.springframework=INFO
+logging.level.com.mkyong=DEBUG
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
